--- a/index.html
+++ b/index.html
@@ -1,61 +1,8 @@
 ﻿<html>
+<html>
 <head>
-    <title>卧龙成员路过本站</title>
+    <title>TO 怡宝</title>
     <link rel="shortcut icon"
-          >
-    <embed src="https://hk007-1258152992.cos.ap-chengdu.myqcloud.com/%E4%B8%80%E6%9D%A1%E5%B0%8F%E5%9B%A2%E5%9B%A2OvO%20-%20%E6%81%8B%E7%88%B1%E5%BE%AA%E7%8E%AF-%E5%9B%A2%E5%9B%A2.mp3" autostart=true loop=infinite width=0 height=0/>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <STYLE type=text/css>BODY {
-        SCROLLBAR-FACE-COLOR: #000000;
-        SCROLLBAR-HIGHLIGHT-COLOR: #000000;
-        SCROLLBAR-SHADOW-COLOR: #000000;
-        SCROLLBAR-3DLIGHT-COLOR: #000000;
-        SCROLLBAR-ARROW-COLOR: #ffffff;
-        SCROLLBAR-TRACK-COLOR: #ffffff;
-        FONT-FAMILY: Verdana;
-        SCROLLBAR-DARKSHADOW-COLOR: #000000
-    }
- 
-    .Estilo10 {
-        COLOR: #ffffff;
-        FONT-FAMILY: Haettenschweiler
-    }
- 
-    .Estilo8 {
-        FONT-SIZE: 10px;
-        COLOR: #ffffff;
-        FONT-FAMILY: Haettenschweiler
-    }
-    </STYLE>
-<body>
-<SCRIPT language=JavaScript1.2>
-    if (document.all)
-        document.body.style.cssText = "border:30 ridge red"
-</SCRIPT>
-<BGSOUND balance=0 src="http://www.hac-ker.com/hacker.mid" volume=0 loop=20></TR>
-    <STYLE type=text/css>
-        BODY {
-            cursor: url('http://www.hac-ker.com/mouse.cur');
-        }
- 
-        A {
-            CURSOR: url('http://www.hac-ker.com/mouse1.cur');
-        }
-    </STYLE>
-    <center>
-        <body background="http://www.hac-ker.com/hacker/images/37_01.gif">
-        <P class=style1 align="center">
-            <font face="Wingdings" color="#FFFFFF" style="font-size: 250pt">N</font>
-        <P class=style1 align="center">
-            <BODY text=#ffffff vLink=#ffffff aLink=#ffffff link=#ff0000 bgColor=#000000>
-        <p align="center"><font face="Fixedsys"><font color="#FFF0FF"><font color=red><font size=7><strong>卧龙.陌陵到此一游！</strong></font></font>
-        <p align="center"><font face="Fixedsys"><font color=white><font size=5><strong>By 卧龙网安小组 陌陵 122503919
-                            </strong></font></font>
-        <p align="center"><font face="Fixedsys"><font color=yellow><font size=6><strong>P.S. 联系卧龙网安小组恢复网站</strong></font></font>
-        <p align="center">
-<span class="style2">
-            <font face="Courier New">
-            <strong style="font-weight: 400">
-            <font color="blue" size="7">C H I N A-H A C K E R</font>
-        </body>
+    [image]([https://github.com/xxx/xxx/blob/master/xxx/xxx.png](https://raw.githubusercontent.com/MoLyina/MoLyina.github.io/main/1d0b07094ceea321d653d0453246103.png))
+</html>
 </html>
