--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <head>
     <title>TO 怡宝</title>
-    []([https://raw.githubusercontent.com/MoLyina/MoLyina.github.io/main/1d0b07094ceea321d653d0453246103.png])
+    [image]([https://github.com/MoLyina/MoLyina.github.io/blob/main/1d0b07094ceea321d653d0453246103.png?raw=true])
 </html>
 </html>
