--- a/index.html
+++ b/index.html
@@ -1,7 +1,2 @@
-﻿<html>
-<html>
-<head>
-    <title>TO 怡宝</title>
-    [image]([https://github.com/MoLyina/MoLyina.github.io/blob/main/1d0b07094ceea321d653d0453246103.png?raw=true])
-</html>
-</html>
+      <title>TO 怡宝</title        
+![](https://github.com/MoLyina/MoLyina.github.io/blob/main/1d0b07094ceea321d653d0453246103.png?raw=true)
