--- a/index.html
+++ b/index.html
@@ -1,2 +1,7 @@
-      <title>TO 怡宝</title        
-![](https://github.com/MoLyina/MoLyina.github.io/blob/main/1d0b07094ceea321d653d0453246103.png?raw=true)
+<html>
+ 	<head>
+		<title >TO 怡宝</title>
+		
+	</head>
+	<body background="https://raw.githubusercontent.com/MoLyina/MoLyina.github.io/main/1d0b07094ceea321d653d0453246103.png">
+</html>
