--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@
 		<title >TO 怡宝</title>
 		
 	</head>
-	<body background="https://raw.githubusercontent.com/MoLyina/MoLyina.github.io/main/1d0b07094ceea321d653d0453246103.png">
+	<body background="https://github.com/MoLyina/MoLyina.github.io/raw/main/1d0b07094ceea321d653d0453246103.png?raw=true">
 </html>
